--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
 <html>
-    <h1>Cade's Portfolio</h1>
-    <img src= "./cadebio.png" />
-    </html>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+
+    
+  </head>
+  <body>
+  <div class="container">
+  <div class="row">
+    <div class="col">
+      <img class = "propic" src="./cadebio.png">
+    </div>
+    <div class="col">
+      Hello, my name is Cade Slayton.  I am a developer in training and hope to one day work for Google.  I am interested in Social Good projects, woodworking, nature and outdoors.  
+    </div>
+    <div class="col">
+<iframe class = "movie" src="https://www.youtube.com/embed/hS6naT51BlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+  <a href="https://github.com/cadeslayton"><img src="./github.png" class="github"></a>
+<a href="https://www.linkedin.com/in/cade-slayton/"><img src="./linkedin.png" class="linkedin"></a>
+</div>
+  </body>
+  
+</html>
